# amazon-warriors

./: Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: dependency.mdc  project.mdc
amazonwarriors/: animation_utils.py  constants.py  input_state.py  sprites.py  state_machines.py  views.py
tests/: test_backward_restrictions.py  test_chained_actions.py  test_example.py  test_input_state.py  test_player_state_machine.py  test_views.py
